# python-modules

module0/ex00/: answers.txt   requirements.txt
module0/ex01/: exec.py
module0/ex02/: whois.py
module0/ex03/: count.py
module0/ex04/: operations.py
module0/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
module0/ex06/: recipe.py
module0/ex07/: filterwords.py
module0/ex08/: sos.py
module0/ex09/: guess.py
module0/ex10/: loading.py
module1/ex00/: book.py  recipe.py  test.py
module1/ex01/: game.py
module1/ex02/: test.py  vector.py
module1/ex03/: generator.py  test.py
module1/ex04/: eval.py  test.py
module1/ex05/: the_bank.py
module2/: filename.txt
module2/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
module2/ex01/: main.py
module2/ex02/: logger.py
module2/ex03/: csvreader.py  test.py
module2/ex04/: README.md  setup.cfg  setup.py  test.py
module2/ex04/src/my_minipack/: progressbar.py
module3/ex00/: NumPyCreator.py  test.py
module3/ex01/: ImageProcessor.py  test.py
module3/ex02/: ScrapBooker.py  test.py
module3/ex03/: ColorFilter.py  test.py
module3/ex04/: Kmeans.py
module4/ex00/: test.py
module4/ex01/: YoungestFellah.py  test.py
module4/ex02/: ProportionBySport.py  test.py
module4/ex03/: HowManyMedals.py  test.py
module4/ex04/: SpatioTemporalData.py  test.py
module4/ex05/: HowManyMedalsByCountry.py  test.py
module4/ex06/: FileLoader.py  MyPlotLib.py  test.py
module4/ex07/: Komparator.py  MyPlotLib.py  test.py
