[metadata]
name = my_minipack
version = 1.0.0
summary = Howto create a package in python.
author = aait-ihi
author_email = aait-ihi@student.1337.fr
license = GPLv3
location = [PATH TO BOOTCAMP PYTHON]/module02/tmp_env/lib/python3.7/site-packages
requires =
required-by =
metadata-Version = 2.1
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Students
    Topic :: Education
    Topic :: HowTo
    Topic :: Package
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
description = Howto create a package in python.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src




